# emaildraft-storage

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
src/: config.rs  main.rs  migration.rs
src/db/: mod.rs
src/db/entities/: bucket.rs  chunk.rs  email_account.rs  mod.rs  multipart_part.rs  multipart_upload.rs  object.rs
src/email/: gmail.rs  metadata.rs  mod.rs  provider.rs
src/s3/: auth.rs  bucket.rs  error.rs  mod.rs  multipart.rs  object.rs  router.rs  sts.rs  xml.rs
src/storage/: chunker.rs  hasher.rs  mod.rs  pipeline.rs
tests/: comprehensive_test.ts  large_file_test.ts
